manifests/openwebui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openwebui
  namespace: openwebui
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts: [webui.81.27.99.77.nip.io]
      secretName: openwebui-tls
  rules:
    - host: webui.81.27.99.77.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: { service: { name: openwebui, port: { number: 80 } } }
